--- a/ukk_pidia/index.html
+++ b/ukk_pidia/index.html
@@ -9,9 +9,9 @@
     <title>SMK NEGERI 4 TASIKMALAYA</title>
 </head>
 <body>
-   
- <!-- SECTION NAVBAR -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    
+    <!-- SECTION NAVBAR -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"  ><img src="logo_SMK4_Tasikmalaya.png" width="20%" height="">SMKN 4 TASIKMALAYA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,31 +20,52 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-            <a class="nav-link" href="#">Beranda</a>
+            <a class="nav-link" href="index.html">Beranda</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">Profil</a>
+            <a class="nav-link" href="profil.html">Profil</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">Ekstrakurikuler</a>
+            <a class="nav-link" href="ekstrakurikuler.html">Ekstrakurikuler</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">Galeri</a>
+            <a class="nav-link" href="galeri.html">Galeri</a>
             </li>
         </div>
     </div>
     </nav>
- <!-- TUTUP SECTION NAVBAR -->
-  <div class="container-fluid banner">
+    <!-- TUTUP SECTION NAVBAR -->
+    <div class="container-fluid banner">
     <div class="container text-center">
         <h4 class="display-6 fw-bolder">Selamat Datang </h4>
         <h3 class="display-1 fw-bolder">SMK NEGERI 4 BISA HEBAT</h>
     </div>
 </div>
 
- <div class="container">
+    <div class="container">
+    <!-- SECTION SAMBUTAN -->
+    <div class="row mt-5">
+        <div class="col-lg-12 d-flex flex-column align-items-center">
+            <h2>Sambutan Kepala Sekolah</h2>
+                <div class="card mb-3" style="max-width: 1500px;">
+    <div class="row g-0">
+        <div class="col-md-4">
+        <img src="kepsek.png" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+        <div class="card-body">
+            <h3 class="card-title d-flex flex-column align-items-center">Assalamualaikum Warahmatullahi Wabarakatuh</h3>
+            <p class="card-text">Selamat datang di SMKN 4 Tasikmalaya. Segala puji dan syukur kita panjatkan kehadirat Allah SWT, semoga kita semua ada dalam lindungan-Nya. Dan atas perkenan-Nya pula kami dapat menghadirkan website SMK Negeri 4 Tasikmalaya ini. Kami berharap dengan adanya website di SMK Negeri 4 Tasikmalaya ini para pengunjung dapat mengenal lebih jauh tentang sekolah kami sehingga dapat mempererat tali silaturrahmi antara sekolah dengan masyarakat demi kemajuan kita bersama. Tiada gading yang tak retak, website kami ini masih dalam proses pengembangan, masih banyak kekurangan yang harus kami perbaiki. Kritik dan sarannya yang membangun sangat kami harapkan untuk pengembangan ke depan.</p>
+            <p class="text-dark-700 leading-relaxed mb-4">Akhirnya, saya mengucapkan terimakasih yang sebesar-besarnya kepada semua pihak yang tidak dapat disebutkan satu segala bantuan dan persatu atas fasilitasnya yang telah diberikan semoga semua yang kita lakukan bermanfaat bagi masyarakat. Wassalamu'alaikum Warahmatullahi Wabarakatuh.</p>
+        </div>
+        </div>
+    </div>
+    </div>
+        </div>
+    </div>
+    <!-- TUTUP SECTION SAMBUTAN -->
     <!-- SECTION BERITA -->
-     <div class="row mt-5">
+    <div class="row mt-5">
         <div class="col-lg-12">
             <h2>Berita</h2>
             <div class="row">
@@ -72,7 +93,7 @@
                 </div>
             </div>
         </div>
-     </div>
+    </div>
     <!-- TUTUP SECTION BERITA -->
 
     <!-- SECTION GALERI -->
@@ -97,7 +118,7 @@
                 <div class="col-lg-3">
                     <div class="card">
                         <div class="card-header p-0">
-                            <img width="100%" src="/perayaan HUT RI KE 80Thn.png" alt="">
+                            <img width="100%" src="perayaan HUT RI KE 80Thn.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -123,7 +144,7 @@
     <div class="card mb-3" style="max-width: 900px;">
     <div class="row g-0">
         <div class="col-md-2">
-        <img src="/rpl.png" class="img-fluid rounded-start" alt="...">
+        <img src="rpl.png" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
         <div class="card-body">
@@ -136,7 +157,7 @@
     <div class="card mb-3" style="max-width: 900px;">
     <div class="row g-0">
         <div class="col-md-2">
-        <img src="/tkj.png" class="img-fluid rounded-start" alt="...">
+        <img src="tkj.png" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
         <div class="card-body">
@@ -149,7 +170,7 @@
     <div class="card mb-3" style="max-width: 900px;">
     <div class="row g-0">
         <div class="col-md-2">
-        <img src="/tsm.png" class="img-fluid rounded-start" alt="...">
+        <img src="tsm.png" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
         <div class="card-body">
@@ -162,7 +183,7 @@
     <div class="card mb-3" style="max-width: 900px;">
     <div class="row g-0">
         <div class="col-md-2">
-        <img src="/dkv.png" class="img-fluid rounded-start" alt="...">
+        <img src="dkv.png" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
         <div class="card-body">
@@ -175,7 +196,7 @@
     <div class="card mb-3" style="max-width: 900px;">
     <div class="row g-0">
         <div class="col-md-2">
-        <img src="/toi.png" class="img-fluid rounded-start" alt="...">
+        <img src="toi.png" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
         <div class="card-body">
@@ -190,11 +211,11 @@
     <!-- TUTUP SECTION JURUSAN -->
 
     <!-- SECTION EKSTRAKURIKULER -->
-     <div class="row mt-5">
+    <div class="row mt-5">
         <div class="col-lg-12 d-flex flex-column align-items-center">
             <h2>Ekstrakurikuler</h2>
         </div>
-     </div>
+    </div>
     <!-- TUTUP SECTION EKSTRAKURIKULER -->
     
     <!-- SECTION STATISTIK -->
