--- a/ukk_pidiaa/ukk_pidia/index.html
+++ b/ukk_pidiaa/ukk_pidia/index.html
@@ -13,7 +13,7 @@
     <!-- SECTION NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"  ><img src="logo_SMK4_Tasikmalaya.png" width="20%" height="">SMKN 4 TASIKMALAYA</a>
+        <a class="navbar-brand" href="#"  ><img src="img/logo_SMK4_Tasikmalaya.png" width="20%" height="">SMKN 4 TASIKMALAYA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,12 +45,12 @@
     <div class="container">
     <!-- SECTION SAMBUTAN -->
     <div class="row mt-5">
-        <div class="col-lg-12 d-flex flex-column align-items-center">
+        <div class="col-lg-12 d-flex flex-column align-items-center text-primary">
             <h2>Sambutan Kepala Sekolah</h2>
-                <div class="card mb-3" style="max-width: 1500px;">
+                <div class="card mt-3" style="max-width: 1500px;">
     <div class="row g-0">
         <div class="col-md-4">
-        <img src="kepsek.png" class="img-fluid rounded-start" alt="...">
+        <img src="img/kepsek.png" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
         <div class="card-body">
@@ -118,7 +118,7 @@
                 <div class="col-lg-3">
                     <div class="card">
                         <div class="card-header p-0">
-                            <img width="100%" src="perayaan HUT RI KE 80Thn.png" alt="">
+                            <img width="100%" src="img/perayaan HUT RI KE 80Thn.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="text-center my-4">
-                <a class="btn btn-outline-primary" href="#">Lihat Lainnya</a>
+                <a class="btn btn-outline-primary" href="galeri.html">Lihat Lainnya</a>
             </div>
         </div>
     </div>
@@ -141,10 +141,10 @@
      <div class="row mt-5">
         <div class="col-lg-12 d-flex flex-column align-items-center">
             <h2>Kosentrasi Keahlian</h2>
-    <div class="card mb-3" style="max-width: 900px;">
+    <div class="card mt-3" style="max-width: 900px;">
     <div class="row g-0">
         <div class="col-md-2">
-        <img src="rpl.png" class="img-fluid rounded-start" alt="...">
+        <img src="img/rpl.png" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
         <div class="card-body">
@@ -154,10 +154,10 @@
         </div>
     </div>
     </div>
-    <div class="card mb-3" style="max-width: 900px;">
+    <div class="card mt-3" style="max-width: 900px;">
     <div class="row g-0">
         <div class="col-md-2">
-        <img src="tkj.png" class="img-fluid rounded-start" alt="...">
+        <img src="img/tkj.png" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
         <div class="card-body">
@@ -167,10 +167,10 @@
         </div>
     </div>
     </div>
-    <div class="card mb-3" style="max-width: 900px;">
+    <div class="card mt-3" style="max-width: 900px;">
     <div class="row g-0">
         <div class="col-md-2">
-        <img src="tsm.png" class="img-fluid rounded-start" alt="...">
+        <img src="img/tsm.png" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
         <div class="card-body">
@@ -180,10 +180,10 @@
         </div>
     </div>
     </div>
-    <div class="card mb-3" style="max-width: 900px;">
+    <div class="card mt-3" style="max-width: 900px;">
     <div class="row g-0">
         <div class="col-md-2">
-        <img src="dkv.png" class="img-fluid rounded-start" alt="...">
+        <img src="img/dkv.png" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
         <div class="card-body">
@@ -193,10 +193,10 @@
         </div>
     </div>
     </div>
-    <div class="card mb-3" style="max-width: 900px;">
+    <div class="card mt-3" style="max-width: 900px;">
     <div class="row g-0">
         <div class="col-md-2">
-        <img src="toi.png" class="img-fluid rounded-start" alt="...">
+        <img src="img/toi.png" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
         <div class="card-body">
@@ -209,14 +209,6 @@
     </div>
     </div>
     <!-- TUTUP SECTION JURUSAN -->
-
-    <!-- SECTION EKSTRAKURIKULER -->
-    <div class="row mt-5">
-        <div class="col-lg-12 d-flex flex-column align-items-center">
-            <h2>Ekstrakurikuler</h2>
-        </div>
-    </div>
-    <!-- TUTUP SECTION EKSTRAKURIKULER -->
     
     <!-- SECTION STATISTIK -->
     <div class="row mt-5">
@@ -225,7 +217,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="card text-center">
-                        <div class="card-body btn btn-outline-light">
+                        <div class="card-body btn btn-outline-primary">
                             <h3><i class="bi bi-person-standing"></i> 1560 <i class="bi bi-person-standing-dress"></i></h3>
                             Peserta Didik
                         </div>
@@ -233,7 +225,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="card text-center">
-                        <div class="card-body btn btn-outline-light">
+                        <div class="card-body btn btn-outline-danger">
                             <h3><i class="bi bi-people"></i> 180 </i></h3>
                             Pendidik
                         </div>
@@ -241,7 +233,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="card text-center">
-                        <div class="card-body btn btn-outline-light">
+                        <div class="card-body btn btn-outline-primary">
                             <h3><i class="bi bi-person-workspace"></i> 45</h3>
                             Rombongan Belajar
                         </div>
@@ -249,7 +241,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="card text-center">
-                        <div class="card-body btn btn-outline-light">
+                        <div class="card-body btn btn-outline-danger">
                             <h3><i class="bi bi-easel"></i> 5</h3>
                             Program Keahlian
                         </div>
