--- a/ukk_pidiaa/ukk_pidia/ekstrakurikuler.html
+++ b/ukk_pidiaa/ukk_pidia/ekstrakurikuler.html
@@ -11,9 +11,9 @@
 <body>
    
  <!-- SECTION NAVBAR -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"  ><img src="logo_SMK4_Tasikmalaya.png" width="20%" height="">SMKN 4 TASIKMALAYA</a>
+        <a class="navbar-brand" href="#"  ><img src="img/logo_SMK4_Tasikmalaya.png" width="20%" height="">SMKN 4 TASIKMALAYA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,3 +34,202 @@
         </div>
     </div>
     </nav>
+    
+    <div class="row mt-5 justify-content-center">
+        <h1 class="ekstrakurikuler text-primary text-center">Ekstrakurikuler</h1> <br>
+        <p class="text-muted text-center">Sekolah kami memiliki beberapa Ekstrakurikuler yang tersedia</p>
+       <div class="row g-4">
+            <!-- Card Item -->
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center">
+                    <img src="img/english.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">English Club</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/bultang.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Bulu Tangkis</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/it.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">IT Club</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/cinem.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Cinematography</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/paskib.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Paskibra</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/pkss.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">PKS</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/pramukaaa.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Pramuka</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/futsal.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Futsal</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/pmrr.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">PMR</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/laskar.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Laskar Pustaka</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/sepak.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Sepak Bola</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/basket.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Basket</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/voly.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Voli</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/rohis.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">IRMA</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/seni.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Seni</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/plhh.jpg" class="ccard-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">PLH</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/boxing.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Boxing</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card text-center py-2 px-3">
+                    <img src="img/pkss.jpg" class="card-img mx-auto w-25" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">PKS</h5>
+                    </div>
+                </div>
+            </div>
+            <!-- SECTION FOOTER -->
+   <div class="row mt-5">
+    <div class="col-lg-12">
+        <div class="row">
+            <div class="col-lg-6">
+                <h3> Peta <i class="bi bi-pin-map-fill"></i></h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.213163631724!2d108.25189907506072!3d-7.3299399720900285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6f59eeb6bda36f%3A0xa9e724a275da6c2d!2sSMK%20Negeri%204%20Tasikmalaya!5e0!3m2!1sid!2sid!4v1755760987973!5m2!1sid!2sid" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="col-lg-4">
+                <h3>Kontak</h3>
+                <i class="bi bi-telephone"></i> (0265)312059 <br>
+                <i class="bi bi-envelope"></i> info@smkn4tasikmalaya <br>
+                <a href="https://www.instagram.com/smkn4tsmofficial/?hl=en"><i class="bi bi-instagram"></i> @smkn4tsmofficial</a> <br>
+                <a href="https://www.youtube.com/@smkn4tasikmalayamediaoffic704/about"><i class="bi bi-youtube"></i> @smkn4tasikmalayamediaoffic704</a> <br>
+                <a href="https://www.tiktok.com/tag/smkn4tasikmalaya"><i class="bi bi-tiktok"></i> @smkn4tasikmalaya</a> <br>
+            </div>
+            <div class="col-lg-2">
+                <h3>Tautan</h3>
+                <ul>
+                    <li><a href="https://kemendikdasmen.go.id/">Kemdikbud</a></li>
+                    <li><a href="https://disdik.jabarprov.go.id/">Disdik Jabar</a></li>
+                    <li><a href="https://provjabar.org/">Provinsi Jabar</a></li>
+                    <li><a href="https://guru.kemdikbud.go.id/">Ruang GTK</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row my-5">
+            <div class="col-lg-12">
+                <footer class="text-center text-muted">
+                    &copy; 2025, All right reserve, <br>
+                    Dibuat oleh pidia rahma laila
+                </footer>
+            </div>
+        </div>
+    </div>
+   </div>
+</div>
+  <!-- TUTUP SECTION FOOTER -->
+    </div>
+    </body>
+    </html>
