--- a/ukk_pidiaa/ukk_pidia/galeri.html
+++ b/ukk_pidiaa/ukk_pidia/galeri.html
@@ -11,9 +11,9 @@
 <body>
    
  <!-- SECTION NAVBAR -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"  ><img src="logo_SMK4_Tasikmalaya.png" width="20%" height="">SMKN 4 TASIKMALAYA</a>
+        <a class="navbar-brand" href="#"  ><img src="img/logo_SMK4_Tasikmalaya.png" width="20%" height="">SMKN 4 TASIKMALAYA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,3 +34,85 @@
         </div>
     </div>
     </nav>
+    <div class="container">
+        <h4 class="mt-5">Galeri</h4>
+        <div class="mt-5 mb-5">
+            <div class="card bg-light card-big text-center rounded-4">
+                <h5 class="fw-semibold mt-5">Jalan Sehat HUT RI 80</h5>
+                <hr class="mt-3">
+                <div class="row justify-content-center m-3">
+                    <div class="col-6 col-md-4">
+                        <div class="card mt-3">
+                            <img src="img/11.JPG" alt="img" class="card-img-top">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4">
+                        <div class="card mt-3">
+                            <img src="img/12.JPG" alt="img" class="card-img-top">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4">
+                        <div class="card mt-3">
+                            <img src="img/13.JPG" alt="img" class="card-img-top">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4">
+                        <div class="card mt-3">
+                            <img src="https://smkn4tsm-frida.vercel.app/_nuxt/hutri1.CK4XGipI.png" alt="img" class="card-img-top">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4">
+                        <div class="card mt-3">
+                            <img src="https://smkn4tsm-frida.vercel.app/_nuxt/hutri1.CK4XGipI.png" alt="img" class="card-img-top">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4">
+                        <div class="card mt-3">
+                            <img src="https://smkn4tsm-frida.vercel.app/_nuxt/hutri1.CK4XGipI.png" alt="img" class="card-img-top">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- SECTION FOOTER -->
+   <div class="row mt-5">
+    <div class="col-lg-12">
+        <div class="row">
+            <div class="col-lg-6">
+                <h3> Peta <i class="bi bi-pin-map-fill"></i></h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.213163631724!2d108.25189907506072!3d-7.3299399720900285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6f59eeb6bda36f%3A0xa9e724a275da6c2d!2sSMK%20Negeri%204%20Tasikmalaya!5e0!3m2!1sid!2sid!4v1755760987973!5m2!1sid!2sid" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="col-lg-4">
+                <h3>Kontak</h3>
+                <i class="bi bi-telephone"></i> (0265)312059 <br>
+                <i class="bi bi-envelope"></i> info@smkn4tasikmalaya <br>
+                <a href="https://www.instagram.com/smkn4tsmofficial/?hl=en"><i class="bi bi-instagram"></i> @smkn4tsmofficial</a> <br>
+                <a href="https://www.youtube.com/@smkn4tasikmalayamediaoffic704/about"><i class="bi bi-youtube"></i> @smkn4tasikmalayamediaoffic704</a> <br>
+                <a href="https://www.tiktok.com/tag/smkn4tasikmalaya"><i class="bi bi-tiktok"></i> @smkn4tasikmalaya</a> <br>
+            </div>
+            <div class="col-lg-2">
+                <h3>Tautan</h3>
+                <ul>
+                    <li><a href="https://kemendikdasmen.go.id/">Kemdikbud</a></li>
+                    <li><a href="https://disdik.jabarprov.go.id/">Disdik Jabar</a></li>
+                    <li><a href="https://provjabar.org/">Provinsi Jabar</a></li>
+                    <li><a href="https://guru.kemdikbud.go.id/">Ruang GTK</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row my-5">
+            <div class="col-lg-12">
+                <footer class="text-center text-muted">
+                    &copy; 2025, All right reserve, <br>
+                    Dibuat oleh pidia rahma laila
+                </footer>
+            </div>
+        </div>
+    </div>
+   </div>
+</div>
+  <!-- TUTUP SECTION FOOTER -->
+    </div>
+    </body>
+    </html>
